# moser

./: LICENSE  README.md  pyproject.toml  tox.ini
data/: B_0_order.txt  README.md
docs/docs_out/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs_out/_modules/: index.html
docs/docs_out/_modules/moser/: example_module.html
docs/docs_out/api/: modules.html  moser.html
docs/source/: conf.py
docs/source/api/: modules.rst  moser.rst
notebooks/: A_instantaneous_speed_and_read_file.txt  B_1_order.txt  B_2_order.txt  C_velocity_time.txt  README.md  notebook.ipynb
src/moser/: BalanceEq.py  Concentration.py  Decompose.py  HConcentration.py  MolarMass.py  Reaction_constant_activity.py  Reaction_constant_concentration.py  Titration.py  __init__.py  __main__.py  calculate_speed.py  instantaneous_speed.py  main_moser.py  reaction_order.py  read_file_and_enter_data.py
tests/: test_example_module.py  tests.py
